
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]

  *) Introduced a new function, OSSL_PROVIDER_available(), which can be used
     to check if a named provider is loaded and available.  When called, it
     will also activate all fallback providers if such are still present.
     [Richard Levitte]

  *) Enforce a minimum DH modulus size of 512 bits.
     [Bernd Edlinger]

  *) Changed DH parameters to generate the order q subgroup instead of 2q.
     Previously generated DH parameters are still accepted by DH_check
     but DH_generate_key works around that by clearing bit 0 of the
     private key for those. This avoids leaking bit 0 of the private key.
     [Bernd Edlinger]

  *) Added a new FUNCerr() macro that takes a function name.
     The macro SYSerr() is deprecated.
     [Rich Salz]

  *) Significantly reduce secure memory usage by the randomness pools.
     [Paul Dale]

  *) {CRYPTO,OPENSSL}_mem_debug_{push,pop} are now no-ops and have been
     deprecated.
     [Rich Salz]

  *) A new type, EVP_KEYEXCH, has been introduced to represent key exchange
     algorithms. An implementation of a key exchange algorithm can be obtained
     by using the function EVP_KEYEXCH_fetch(). An EVP_KEYEXCH algorithm can be
     used in a call to EVP_PKEY_derive_init_ex() which works in a similar way to
     the older EVP_PKEY_derive_init() function. See the man pages for the new
     functions for further details.
     [Matt Caswell]

  *) The EVP_PKEY_CTX_set_dh_pad() macro has now been converted to a function.
     [Matt Caswell]

  *) Removed the function names from error messages and deprecated the
     xxx_F_xxx define's.

  *) Removed NextStep support and the macro OPENSSL_UNISTD
     [Rich Salz]
