@@ -35,7 +35,6 @@ extern int info_main(int argc, char *argv[]);
 extern int kdf_main(int argc, char *argv[]);
 extern int list_main(int argc, char *argv[]);
 extern int mac_main(int argc, char *argv[]);
-extern int nseq_main(int argc, char *argv[]);
 extern int ocsp_main(int argc, char *argv[]);
 extern int passwd_main(int argc, char *argv[]);
 extern int pkcs12_main(int argc, char *argv[]);
@@ -87,7 +86,6 @@ extern const OPTIONS info_options[];
 extern const OPTIONS kdf_options[];
 extern const OPTIONS list_options[];
 extern const OPTIONS mac_options[];
-extern const OPTIONS nseq_options[];
 extern const OPTIONS ocsp_options[];
 extern const OPTIONS passwd_options[];
 extern const OPTIONS pkcs12_options[];
