@@ -20,10 +20,6 @@ PEM_read_EC_PUBKEY,
 PEM_read_bio_EC_PUBKEY,
 PEM_write_EC_PUBKEY,
 PEM_write_bio_EC_PUBKEY,
-PEM_read_NETSCAPE_CERT_SEQUENCE,
-PEM_read_bio_NETSCAPE_CERT_SEQUENCE,
-PEM_write_NETSCAPE_CERT_SEQUENCE,
-PEM_write_bio_NETSCAPE_CERT_SEQUENCE,
 PEM_read_PKCS8,
 PEM_read_bio_PKCS8,
 PEM_write_PKCS8,
