@@ -81,8 +81,6 @@ NAME_CONSTRAINTS_free,
 NAME_CONSTRAINTS_new,
 NAMING_AUTHORITY_free,
 NAMING_AUTHORITY_new,
-NETSCAPE_CERT_SEQUENCE_free,
-NETSCAPE_CERT_SEQUENCE_new,
 NETSCAPE_SPKAC_free,
 NETSCAPE_SPKAC_new,
 NETSCAPE_SPKI_free,
