@@ -74,7 +74,6 @@ d2i_IPAddressOrRange,
 d2i_IPAddressRange,
 d2i_ISSUING_DIST_POINT,
 d2i_NAMING_AUTHORITY,
-d2i_NETSCAPE_CERT_SEQUENCE,
 d2i_NETSCAPE_SPKAC,
 d2i_NETSCAPE_SPKI,
 d2i_NOTICEREF,
@@ -260,7 +259,6 @@ i2d_IPAddressOrRange,
 i2d_IPAddressRange,
 i2d_ISSUING_DIST_POINT,
 i2d_NAMING_AUTHORITY,
-i2d_NETSCAPE_CERT_SEQUENCE,
 i2d_NETSCAPE_SPKAC,
 i2d_NETSCAPE_SPKI,
 i2d_NOTICEREF,
