@@ -600,7 +600,9 @@ NCONF_load
 NCONF_load_bio
 NCONF_load_fp
 NCONF_new
+NETSCAPE_CERT_SEQUENCE_free
 NETSCAPE_CERT_SEQUENCE_it
+NETSCAPE_CERT_SEQUENCE_new
 NETSCAPE_SPKAC_it
 NETSCAPE_SPKI_b64_decode
 NETSCAPE_SPKI_b64_encode
@@ -804,9 +806,13 @@ PEM_X509_INFO_write_bio
 PEM_def_callback
 PEM_dek_info
 PEM_proc_type
+PEM_read_NETSCAPE_CERT_SEQUENCE
 PEM_read_bio_ECPrivateKey
+PEM_read_bio_NETSCAPE_CERT_SEQUENCE
 PEM_read_bio_Parameters
+PEM_write_NETSCAPE_CERT_SEQUENCE
 PEM_write_bio_ASN1_stream
+PEM_write_bio_NETSCAPE_CERT_SEQUENCE
 PEM_write_bio_Parameters
 PKCS12_AUTHSAFES_it
 PKCS12_BAGS_it
@@ -1458,6 +1464,7 @@ conf_ssl_get_cmd
 conf_ssl_name_find
 d2i_ESS_CERT_ID_V2
 d2i_ESS_SIGNING_CERT_V2
+d2i_NETSCAPE_CERT_SEQUENCE
 d2i_X509_bio
 d2i_X509_fp
 err_free_strings_int
@@ -1471,6 +1478,7 @@ i2b_PrivateKey_bio
 i2b_PublicKey_bio
 i2d_ESS_CERT_ID_V2
 i2d_ESS_SIGNING_CERT_V2
+i2d_NETSCAPE_CERT_SEQUENCE
 i2d_PrivateKey_bio
 i2d_PrivateKey_fp
 i2d_X509_bio
